lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_path_len/buffer_append_path_len1/buffer_append_path_len1.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_path_len/buffer_append_path_len1/buffer_append_path_len1.c:15:21: warning: implicit declaration of function 'chunk_buffer_acquire' is invalid in C99 [-Wimplicit-function-declaration]
    buffer * s__b = chunk_buffer_acquire();
                    ^
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_path_len/buffer_append_path_len1/buffer_append_path_len1.c:15:14: warning: incompatible integer to pointer conversion initializing 'buffer *' with an expression of type 'int' [-Wint-conversion]
    buffer * s__b = chunk_buffer_acquire();
             ^      ~~~~~~~~~~~~~~~~~~~~~~
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_path_len/buffer_append_path_len1/buffer_append_path_len1.c:26:31: error: use of undeclared identifier 'dyn_size'
    size_t sz_alen = (size_t) dyn_size[-1];
                              ^
2 warnings and 1 error generated.
